--- a/src/app/pages/atendimento/buscar-atendimento/buscar-atendimento.component.html
+++ b/src/app/pages/atendimento/buscar-atendimento/buscar-atendimento.component.html
@@ -86,6 +86,13 @@
                     <ngx-datatable #myTable class="bootstrap" [rows]="rowData" [columnMode]="'force'"
                       [headerHeight]="35" [footerHeight]="50" [rowHeight]="'auto'"
                       [messages]="{ emptyMessage: 'Sem dados...' }" [limit]="40">
+                      <ngx-datatable-column name="Médico" prop="medico">
+                        <ng-template ngx-datatable-cell-template let-row="row">
+                          <div class="text-center">
+                            {{ row.medico }}
+                          </div>
+                        </ng-template>
+                      </ngx-datatable-column>
                       <ngx-datatable-column name="Data" prop="data">
                         <ng-template ngx-datatable-cell-template let-row="row">
                           <div class="text-center">
