--- a/src/app/pages/configurar-agenda/parametrizar-plano/parametrizar-plano.component.html
+++ b/src/app/pages/configurar-agenda/parametrizar-plano/parametrizar-plano.component.html
@@ -35,7 +35,7 @@
                       <label class="div-expediente">Aceita plano de saúde</label>
                       <div class="row pl-3">
                         <label class="radio-inline mr-3">
-                          <input class="mat-button" type="radio" id="radio" name="optradio" checked value="S"
+                          <input class="mat-button" type="radio" id="radio" name="optradio" value="S"
                             (click)="planoSaude($event.target.value)">
                           Sim</label>
                         <label class="radio-inline">
@@ -134,7 +134,7 @@
                   </div>
                 </div>
               </div>
-              <div class="text-right">                
+              <div class="text-right" *ngIf="isBtnPlano">                
                 <button class="btn btn-success" (click)="salvar(formParametrizarPlano.value)">
                   SALVAR
                 </button>
