--- a/src/app/pages/configurar-agenda/parametrizar-consulta/parametrizar-consulta.component.html
+++ b/src/app/pages/configurar-agenda/parametrizar-consulta/parametrizar-consulta.component.html
@@ -125,11 +125,11 @@
                       <div class="form-group">
                         <div class="pb-2 row">
                           <label class="radio-inline pl-3">
-                            <input class="mat-button" type="radio" id="radio" name="optPresencial" value="true"
-                              formControlName="optPresencial" />
+                            <input class="mat-button" type="radio" id="radioSim" name="optPresencial" value=""
+                              formControlName="optPresencial"/>
                             Sim</label>
                           <label class="radio-inline pl-2">
-                            <input class="mat-button" type="radio" id="radio" name="optPresencial" value="false"
+                            <input class="mat-button" type="radio" id="radioNao" name="optPresencial" value=""
                               formControlName="optPresencial" />
                             Não</label>
                         </div>
