--- a/src/app/pages/gestao-paciente/novo-paciente/novo-paciente.component.html
+++ b/src/app/pages/gestao-paciente/novo-paciente/novo-paciente.component.html
@@ -19,7 +19,7 @@
                   </div>
                 </div>
                 <div class="form-row align-items-center">
-                  <div class="form-group col-md-2">
+                  <div class="form-group col-md-3">
                     <div class="form-group">
                       <div class="btn_clinica">
                         <button nbButton outline status="primary" type="button" id="informacao"
@@ -29,7 +29,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="form-group col-md-2">
+                  <div class="form-group col-md-3">
                     <div class="form-group">
                       <div class="btn_clinica">
                         <button nbButton outline status="primary" type="button" id="localizacao"
@@ -39,7 +39,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="form-group col-md-2">
+                  <div class="form-group col-md-3">
                     <div class="form-group">
                       <div class="btn_clinica">
                         <button nbButton outline status="primary" type="button" id="contato"
@@ -49,7 +49,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="form-group col-md-2">
+                  <div class="form-group col-md-3">
                     <div class="form-group">
                       <div class="btn_clinica">
                         <button nbButton outline status="primary" type="button" id="addFotos"
@@ -59,7 +59,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="form-group col-md-2">
+                  <!--<div class="form-group col-md-2">
                     <div class="form-group">
                       <div class="btn_clinica">
                         <button nbButton outline status="primary" type="button" id="precoExclusivo"
@@ -69,7 +69,7 @@
                             icon="credit-card-outline"></nb-icon> Preço</button>
                       </div>
                     </div>
-                  </div>
+                  </div>-->
                 </div>
                 <div *ngIf="isInformacao">
                   <div class="form-row align-items-center">
@@ -295,7 +295,7 @@
                     </div>
                   </div>
                 </div>
-                <div *ngIf="isPrecoEspecial">
+                <!--<div *ngIf="isPrecoEspecial">
                   <div class="form-row align-items-center">
                     <div class="form-group">
                       <label class="pl-1">Selecione abaixo quais as modalidades de consultas o médico atende.</label>
@@ -411,7 +411,7 @@
                       </div>
                     </div>
                   </div>
-                </div>
+                </div>-->
                 <div class="form-row align-items-center pt-5 modal-footer">
                   <div class="form-group col-md-2" *ngIf="isVoltar">
                     <div class="form-group">
